--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "stimulus": "^1.1.1",
     "tailwindcss": "^2.0.1-compat",
+    "tailwindcss-stimulus-components": "^2.0.12",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
